--- a/Flag Guessing Game/howtoplay.html
+++ b/Flag Guessing Game/howtoplay.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How To Play ?</title>
     <link rel="stylesheet" href="../Flag Guessing Game/styles/reset.css">
     <link rel="stylesheet" href="../Flag Guessing Game/styles/navbar.css">
+    <link rel="stylesheet" href="../Flag Guessing Game/styles/htp.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>How To Play ?</title>
 </head>
 <body>
     <nav>
@@ -13,6 +15,18 @@
         <a href="../Flag Guessing Game/contact.html">Contact</a>
         <a href="../Flag Guessing Game/howtoplay.html">How To Play ?</a>
     </nav>
+
+    <section class="htpcontainer">
+        <article class="htpicon">
+          <i class="fa-solid fa-earth-americas"></i>
+        </article>
+
+        <article class="htptext">
+           <p>
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio reprehenderit officia labore rerum, maiores commodi minima consectetur eaque explicabo dolore officiis laborum vero hic sunt totam eligendi molestiae perspiciatis architecto!
+           </p>
+        </article>
+    </section>
     
 </body>
 </html>
