--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Flag Guessing Game/styles/reset.css">
-    <link rel="stylesheet" href="../Flag Guessing Game/styles/navbar.css">
-    <link rel="stylesheet" href="../Flag Guessing Game/styles/contact.css">
+    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/navbar.css">
+    <link rel="stylesheet" href="/styles/contact.css">
     <title>Document</title>
 </head>
 <body>
     <nav>
-        <a href="../Flag Guessing Game/game.html">Start A Game</a>
-        <a href="../Flag Guessing Game/contact.html">Contact</a>
-        <a href="../Flag Guessing Game/howtoplay.html">How To Play ?</a>
+        <a href="game.html">Start A Game</a>
+        <a href="contact.html">Contact</a>
+        <a href="howtoplay.html">How To Play ?</a>
     </nav>
 
     <form>
