--- a/game.html
+++ b/game.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Flag Guessing Game/styles/reset.css">
-    <link rel="stylesheet" href="../Flag Guessing Game/styles/game.css">
+    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/game.css">
     <title>Document</title>
 </head>
 <body>
     <section class="gamescreen">
-        <img id="flag" src="../Flag Guessing Game/images/Turkey.png">
+        <img id="flag" src="/images/Turkey.png">
         <button id="choice1">Choice 1</button>
         <button id="choice2">Choice 2</button>
         <button id="choice3">Choice 3</button>
