--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flag Guessing Game</title>
-    <link rel="stylesheet" href="../Flag Guessing Game/styles/reset.css">
-    <link rel="stylesheet" href="../Flag Guessing Game/styles/navbar.css">
-    <link rel="stylesheet" href="../Flag Guessing Game/styles/main.css">
+    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/navbar.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
     <nav>
-        <a href="../Flag Guessing Game/game.html">Start A Game</a>
-        <a href="../Flag Guessing Game/contact.html">Contact</a>
-        <a href="../Flag Guessing Game/howtoplay.html">How To Play ?</a>
+        <a href="game.html">Start A Game</a>
+        <a href="contact.html">Contact</a>
+        <a href="howtoplay.html">How To Play ?</a>
     </nav>
 
     <main>
         <h1>Click To Start A New Game</h1>
-        <a href="../Flag Guessing Game/game.html">
+        <a href="game.html">
            <span>Start Game</span>
         </a>      
     </main>
