--- a/howtoplay.html
+++ b/howtoplay.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Flag Guessing Game/styles/reset.css">
-    <link rel="stylesheet" href="../Flag Guessing Game/styles/navbar.css">
-    <link rel="stylesheet" href="../Flag Guessing Game/styles/htp.css">
+    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/navbar.css">
+    <link rel="stylesheet" href="/styles/htp.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>How To Play ?</title>
 </head>
 <body>
     <nav>
-        <a href="../Flag Guessing Game/game.html">Start A Game</a>
-        <a href="../Flag Guessing Game/contact.html">Contact</a>
-        <a href="../Flag Guessing Game/howtoplay.html">How To Play ?</a>
+        <a href="game.html">Start A Game</a>
+        <a href="contact.html">Contact</a>
+        <a href="howtoplay.html">How To Play ?</a>
     </nav>
 
     <section class="htpcontainer">
