--- a/game.html
+++ b/game.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <section class="gamescreen">
-        <img id="flag" src="/images/Turkey.png">
-        <button id="choice1">Choice 1</button>
-        <button id="choice2">Choice 2</button>
-        <button id="choice3">Choice 3</button>
+        <img id="flag">
+        <button id="choice1"></button>
+        <button id="choice2"></button>
+        <button id="choice3"></button>
         <button id="next">Next</button>
     </section>
 </body>
 </html>
+<script src="scripts/game.js"></script>
