--- a/game.html
+++ b/game.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div>Congrats!!!! </div>
+    <span id="mypoint">Score : 0</span>
     <section class="gamescreen">
         <img id="flag">
         <button id="choice1"></button>
